[gd_scene load_steps=11 format=2]

[ext_resource path="res://data/images/windowedicon_on.png" type="Texture" id=1]
[ext_resource path="res://data/images/windowedicon_off.png" type="Texture" id=2]
[ext_resource path="res://FPScounter.gd" type="Script" id=3]
[ext_resource path="res://FullScreenIcon.gd" type="Script" id=4]
[ext_resource path="res://data/fonts/8bitOperatorPlus8-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://data/images/soundicon_on.png" type="Texture" id=6]
[ext_resource path="res://data/images/soundicon_off.png" type="Texture" id=7]
[ext_resource path="res://data/audio/select.wav" type="AudioStream" id=8]

[sub_resource type="DynamicFont" id=1]
size = 20
extra_spacing_top = 5
extra_spacing_bottom = 15
font_data = ExtResource( 5 )

[sub_resource type="GDScript" id=2]
script/source = "extends Node


# Declare member variables here. Examples:
var doaudio = not AudioServer.is_bus_mute(0)


# Called when the node enters the scene tree for the first time.
func _ready():
	if doaudio==true:
		$AudioIconButton.set_pressed(false)
	else:
		$AudioIconButton.set_pressed(true)


# Called every frame. 'delta' is the elapsed time since the previous frame.
#func _process(delta):
#	pass

# toggle audio from icon
func _on_AudioIconButton_toggled(button_pressed):
	$AudioIconSound.play()
	if button_pressed==true:
		doaudio=false
	else:
		doaudio=true
	if doaudio ==false:
		AudioServer.set_bus_mute(0, true)# mute audio bus 0
	else:
		AudioServer.set_bus_mute(0, false)# unmute audio bus 0
"

[node name="Utilities" type="Node"]

[node name="FPSCounterHere" type="Node" parent="."]

[node name="FPScounterLabel" type="Label" parent="FPSCounterHere"]
margin_left = 447.821
margin_top = 691.695
margin_right = 487.821
margin_bottom = 726.695
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "60"
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FPScounterTimer" type="Timer" parent="FPSCounterHere/FPScounterLabel"]
wait_time = 0.5
autostart = true

[node name="AudioIcon" type="Node" parent="."]
script = SubResource( 2 )

[node name="AudioIconButton" type="TextureButton" parent="AudioIcon"]
margin_left = 51.6502
margin_top = 682.508
margin_right = 251.65
margin_bottom = 882.508
rect_scale = Vector2( 0.15, 0.15 )
toggle_mode = true
texture_normal = ExtResource( 6 )
texture_pressed = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AudioIconSound" type="AudioStreamPlayer" parent="AudioIcon"]
stream = ExtResource( 8 )

[node name="FullScreenIcon" type="Node" parent="."]
script = ExtResource( 4 )

[node name="FullScreenIconButton" type="TextureButton" parent="FullScreenIcon"]
margin_left = 7.62823
margin_top = 683.318
margin_right = 207.628
margin_bottom = 883.318
rect_scale = Vector2( 0.15, 0.15 )
toggle_mode = true
texture_normal = ExtResource( 2 )
texture_pressed = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullScreenIconSound" type="AudioStreamPlayer" parent="FullScreenIcon"]
stream = ExtResource( 8 )

[connection signal="timeout" from="FPSCounterHere/FPScounterLabel/FPScounterTimer" to="FPSCounterHere/FPScounterLabel" method="_on_FPScounterTimer_timeout"]
[connection signal="toggled" from="AudioIcon/AudioIconButton" to="AudioIcon" method="_on_AudioIconButton_toggled"]
[connection signal="toggled" from="FullScreenIcon/FullScreenIconButton" to="FullScreenIcon" method="_on_FullScreenIconButton_toggled"]
